[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwrpy"
version = "5.0.6"
description = "PWRPY is a Python library for interacting with the PWR network."
readme = "README.md"
requires-python = ">=3.7.2"
license = "MIT"
keywords = ["pwr", "network", "python", "library"]
authors = [
    {name = "PWR Labs", email = "devservices@pwrlabs.io"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/pwrlabs/pwrpy"
documentation = "https://pwrpy.readthedocs.io/"
issues = "https://github.com/pwrlabs/pwrpy/issues"

[tool.hatchling.dependencies]
dependencies = [
    "aiohttp = '3.9.3'",
    "aiosignal = '1.3.1'",
    "asn1crypto = '1.5.1'",
    "async-timeout = '4.0.3'",
    "attrs = '23.2.0'",
    "bitarray = '2.9.2'",
    "brotli = '1.0.9'",
    "certifi = '2024.2.2'",
    "cffi = '1.16.0'",
    "charset-normalizer = '2.0.4'",
    "coincurve = '19.0.1'",
    "cryptography = '42.0.5'",
    "cytoolz = '0.12.3'",
    "eth-account = '0.11.0'",
    "eth-hash = '0.7.0'",
    "eth-keyfile = '0.8.0'",
    "eth-keys = '0.5.0'",
    "eth-rlp = '1.0.1'",
    "eth-typing = '4.0.0'",
    "eth-utils = '4.0.0'",
    "eth_abi = '5.0.1'",
    "frozenlist = '1.4.1'",
    "hexbytes = '0.3.1'",
    "idna = '3.4'",
    "jsonschema = '4.21.1'",
    "jsonschema-specifications = '2023.12.1'",
    "lru-dict = '1.3.0'",
    "multidict = '6.0.5'",
    "Naked = '0.1.32'",
    "parsimonious = '0.9.0'",
    "protobuf = '5.26.0'",
    "pycparser = '2.21'",
    "pycryptodome = '3.20.0'",
    "python = ^3.9",
    "pysocks = '1.7.1'",
    "pyunormalize = '15.1.0'",
    "PyYAML = '6.0.1'",
    "referencing = '0.34.0'",
    "regex = '2023.12.25'",
    "requests = '2.31.0'",
    "rlp = '4.0.0'",
    "rpds-py = '0.18.0'",
    "shellescape = '3.8.1'",
    "toolz = '0.12.1'",
    "typing_extensions = '4.10.0'",
    "urllib3 = '2.1.0'",
    "win-inet-pton = '1.1.0'",
    "yarl = '1.9.4'"
]