[tool.poetry]
name = "pwrpy"
version = "6.0.4"
description = "PWRPY is a Python library for interacting with the PWR network."
readme = "README.md"
license = "MIT"
authors = ["PWR Labs <devservices@pwrlabs.io>"]
packages = [
    { include = "pwrpy" }
]
keywords = ["pwr", "network", "python", "library"]
repository = "https://github.com/pwrlabs/pwrpy"
documentation = "https://docs.pwrlabs.io/"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
requests = "^2.32.3"
eth-account = "^0.13.3"
coincurve = "^20.0.0"
ecdsa = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
poethepoet = "^0.27.0"
coverage = "^7.2.1"
pytest-asyncio = "^0.21.1"
pylint = "3.2.5"
pytest-mock = "^3.6.1"
pytest-xdist = "^3.2.1"
pyright = "1.1.371"
pytest-cov = "^5.0.0"
isort = "^5.11.4"
pytest-rerunfailures = "^14.0"
python-dotenv = "^1.0.0"
setuptools = "^70.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
