[tool.poetry]
name = "pwrpy"
version = "6.0.9"
description = "PWRPY is a Python library for interacting with the PWR network."
readme = "README.md"
license = "MIT"
authors = ["PWR Labs <devservices@pwrlabs.io>"]
packages = [
    { include = "pwrpy" }
]
keywords = ["pwr", "network", "python", "library"]
repository = "https://github.com/pwrlabs/pwrpy"
documentation = "https://docs.pwrlabs.io/"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.32.3"
eth-account = "^0.13.3"
coincurve = "^20.0.0"
ecdsa = "^0.19.0"
python-dotenv = "^1.0.0"
cryptography = "^44.0.2"
safe-pysha3 = "^1.0.4"
liboqs-pwr = "^0.12.1"
mnemonic = "^0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
